# aoc2023

./: .clang-format  .gitignore  CMakeLists.txt  README.md  init.sh  run.sh  template.cpp
01-12-2023/: 01-12-2023.cpp  sample3.txt
02-12-2023/: 02-12-2023.cpp
03-12-2023/: 03-12-2023.cpp  gear.hpp
04-12-2023/: 04-12-2023.cpp
06-12-2023/: 06-12-2023.cpp
07-12-2023/: 07-12-2023.cpp  input.txt
08-12-2023/: 08-12-2023.cpp
09-12-2023/: 09-12-2023.cpp
